2007-06-22  Jay Belanger  <jay.p.belanger@gmail.com>

	* calc/calc-forms.el (math-format-date-part)
	(calc-parse-standard-date,calcFunc-julian): Fix incorrect number
	used in calculations.

2007-06-22  Thien-Thi Nguyen  <ttn@gnuvola.org>

	* simple.el (next-error-recenter): New defcustom.
	(next-error, next-error-internal): Recenter if specified,
	immediately prior to running `next-error-hook'.

	* progmodes/hideshow.el (hs-show-block): Use line-end-position.
	(hs-hide-block-at-point, hs-hide-comment-region): Likewise.

	* progmodes/hideshow.el (hs-hide-all): Use progress reporter.

2007-06-22  Jay Belanger  <jay.p.belanger@gmail.com>

	* calc/calc-comb.el (math-small-factorial-table): New variable.
	(calcFunc-fact): Use `math-small-factorial-table'.

	* calc/calc-ext.el (math-defcache): Allow forms to evaluate
	initial values.
	(math-approx-pi,math-approx-sqrt-e,math-approx-gamma-const):
	New variables to use in caches.

	* calc/calc-forms.el (math-format-date-part)
	(math-parse-standard-date,calcFunc-julian):
	Use `math-read-number-simple' to insert bignums.

	* calc/calc-func.el (math-besJ0,math-besJ1,math-besY0,math-besY1)
	(math-bernoulli-b-cache): Use math-read-number-simple to insert
	bignums.

	* calc/calc-math.el (math-approx-ln-10, math-approx-ln-2):
	New variables to use in caches.

2007-06-22  Dan Nicolaescu  <dann@ics.uci.edu>

	* vc-bzr.el (vc-bzr-log-view-mode): Add + to the email address
	regexp.

	* vc-hg.el (vc-hg-log-view-mode): New mode.

2007-06-21  Jay Belanger  <jay.p.belanger@gmail.com>

	* calc/calc.el (math-read-number-simple): New function.

2007-06-21  Reto Zimmermann  <reto@gnu.org>

	* vera-mode.el (vera-mode): Fix `commend-end-skip' setting.
	(vera-font-lock-match-item): Fix doc string.
	(vera-in-comment-p): Remove unused function.
	(vera-skip-forward-literal,vera-skip-backward-literal): Improve code,
	use `syntax-ppss'.
	(vera-forward-syntactic-ws): Fix argument order.
	(vera-prepare-search): Use `with-syntax-table'.